--- a/package.json
+++ b/package.json
@@ -21,16 +21,20 @@
   },
   "dependencies": {
     "@aws-sdk/client-bedrock-runtime": "^3.621.0",
+    "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.17.0",
+    "@types/multer": "^1.4.11",
+    "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "prisma": "^5.17.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "unzipper": "^0.12.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
