--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prisma": "^5.17.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "tesseract.js": "^5.1.0",
     "unzipper": "^0.12.2"
   },
   "devDependencies": {
